--- a/java/app/src/main/res/layout/fragment_home.xml
+++ b/java/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginLeft="12dp"
+    android:layout_marginRight="12dp">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeContainer"
@@ -21,7 +23,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginTop="24dp">
 
                 <!-- Update section -->
                 <include
@@ -30,10 +33,226 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:visibility="gone" />
-                <TextView
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/home_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:id="@+id/home_1_1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        app:layout_constraintBottom_toTopOf="@id/home_1_2"
+                        app:layout_constraintTop_toTopOf="parent">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Last updated: May 12 2020, 3:36:21 PM"
+                            android:fontFamily="@font/opensans_bolditalic"
+                            android:textSize="10dp"
+                            android:textColor="#1b1b2f"
+                            android:gravity="right"
+                            android:paddingBottom="12dp"
+                            />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/total_cases_title"
+                            android:fontFamily="@font/opensans_bold"
+                            android:textSize="16dp"
+                            />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="4,289,084"
+                            android:textColor="#1b1b2f"
+                            android:fontFamily="@font/opensans_bold"
+                            android:textSize="40dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/new_cases_title"
+                            android:fontFamily="@font/opensans_bold"
+                            android:textSize="16dp"
+                            android:paddingBottom="4dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="120,023"
+                            android:textColor="#162447"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:textSize="20dp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/home_1_2"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toLeftOf="@id/home_1_3"
+                        app:layout_constraintTop_toBottomOf="@id/home_1_1">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/total_deaths_title"
+                            android:fontFamily="@font/opensans_bold"
+                            android:textSize="16dp"
+                            android:paddingBottom="4dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="288,346"
+                            android:textColor="#ff5200"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:textSize="28dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/new_deaths_title"
+                            android:fontFamily="@font/opensans_bold"
+                            android:textSize="16dp"
+                            android:paddingTop="4dp"
+                            android:paddingBottom="4dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="12,0221"
+                            android:textColor="#162447"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:textSize="20dp"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/home_1_3"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toRightOf="@id/home_1_2"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/home_1_1">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/total_recovered_title"
+                            android:fontFamily="@font/opensans_bold"
+                            android:textSize="16dp"
+                            android:paddingBottom="4dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="1,544,915"
+                            android:textColor="#21bf73"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:textSize="28dp"/>
+                    </LinearLayout>
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <LinearLayout
+                    android:id="@+id/home_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Home"/>
+                    android:orientation="vertical"
+                    android:paddingTop="12dp"
+                    android:paddingBottom="6dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Total Cases by Continents"
+                        android:fontFamily="@font/opensans_extrabold"
+                        android:textSize="16dp"/>
+
+                    <com.github.mikephil.charting.charts.PieChart
+                        android:id="@+id/chart1"
+                        android:layout_width="250dp"
+                        android:layout_height="250dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/home_3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Total Deaths by Continents"
+                        android:fontFamily="@font/opensans_extrabold"
+                        android:textSize="16dp"/>
+
+                    <com.github.mikephil.charting.charts.PieChart
+                        android:id="@+id/chart2"
+                        android:layout_width="250dp"
+                        android:layout_height="250dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/home_4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Recent Cases in Week"
+                        android:fontFamily="@font/opensans_extrabold"
+                        android:textSize="16dp"/>
+
+                    <com.github.mikephil.charting.charts.BarChart
+                        android:id="@+id/chart3"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/home_5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Recent Deaths in Week"
+                        android:fontFamily="@font/opensans_extrabold"
+                        android:textSize="16dp"/>
+
+                    <com.github.mikephil.charting.charts.BarChart
+                        android:id="@+id/chart4"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp" />
+                </LinearLayout>
+
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
