--- a/java/app/src/main/res/values/colors.xml
+++ b/java/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="colorLightBackground">#5c3b7d</color>
     <color name="colorBaseBackground">#160e1e</color>
     <color name="colorNormalBackground">#291a37</color>
-    <color name="colorSelectedText">#8BC34A</color>
+    <color name="colorSelectedText">#76B041</color>
 </resources>
