--- a/java/app/src/main/res/values/styles.xml
+++ b/java/app/src/main/res/values/styles.xml
@@ -6,6 +6,11 @@
         <item name="android:windowTranslucentNavigation">true</item>-->
 
     </style>
+    <style name="Widget.BottomNavigationView14" parent="@style/Widget.Design.BottomNavigationView">
+        <item name="fontFamily">@font/opensans</item>
+    </style>
+
+
     <style name="MineCustomTabText" parent="TextAppearance.Design.Tab">
         <item name="android:textSize">14sp</item>
         <item name="textAllCaps">false</item>
