--- a/java/app/src/main/res/layout/component_network_error.xml
+++ b/java/app/src/main/res/layout/component_network_error.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:layout_gravity="center"
+    android:background="#acc"
     >
     <ImageView
         android:layout_width="48dp"
@@ -12,7 +13,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Vui lòng kiểm tra lại kết nối mạng "
+        android:text="@string/network_error"
         android:textSize="14sp"
         android:textColor="#fff"
         android:textAlignment="center"
@@ -22,7 +23,7 @@
         android:id="@+id/reloadButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tải Lại"
+        android:text="@string/network_retry"
         android:textAllCaps="false"/>
 
 </LinearLayout>
